# school

information_theory/: README.md
information_theory/hw5/: Cargo.toml  README.md
information_theory/hw5/elgamal/: Cargo.toml
information_theory/hw5/elgamal/src/: lib.rs
information_theory/hw5/lab/: Cargo.toml  output
information_theory/hw5/lab/src/: main.rs
information_theory/hw5/libcrc/: Cargo.toml
information_theory/hw5/libcrc/src/: lib.rs
information_theory/hw6/: Cargo.toml  README.md
information_theory/hw6/libbch/: Cargo.toml  README.md
information_theory/hw6/libbch/libbch/: Cargo.toml
information_theory/hw6/libbch/libbch-sys/: Cargo.toml  build.rs
information_theory/hw6/libbch/libbch-sys/src/: bindings.rs
information_theory/hw6/libbch/libbch-sys/src/c/: bch.c
information_theory/hw6/libbch/libbch/src/: lib.rs
information_theory/hw6/src/: main.rs
information_theory/hw7/: Cargo.toml  README.md
information_theory/hw7/src/: main.rs
timp/: README.md
timp/lab1/: README.md
timp/lab1/part_one/: Cargo.toml
timp/lab1/part_one/src/: main.rs
timp/lab1/part_one/src/ioctl/: mod.rs
timp/lab1/part_two/: Cargo.toml  default.css  index.html
timp/lab1/part_two/src/: main.rs
timp/lab2/: Cargo.toml  README.md
timp/lab2/src/: ma.rs  main.rs  main1.rs  main_working_start.rs
timp/lab2/src/trial/: mod.rs
timp/lab2/wix/: main.wxs
