[package]
name = "lab2"
version = "0.1.0"
edition = "2021"

authors = ["Nikolaev Gleb"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
registry = "1.2.2"
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["wgpu"] }
dirs-next = "2.0.0"
